# QDBus

./: Commands.txt  README.md
Dbus/: add.xml
Dbus/Calculator_Client/: Calculator_Client.pro  calculator_proxy.cpp  calculator_proxy.h  main.cpp
Dbus/Dbus/: Calculator.cpp  Calculator.h  Dbus.pro  calculator_adaptor.cpp  calculator_adaptor.h  main.cpp
Example1/DBusClient/: DBusClient  DBusClient.pro  Makefile  client.cpp
Example1/DBusServer/: DBusServer  DBusServer.pro  Makefile  server.cpp  server.moc
Example2/QDBusClient/: CMakeLists.txt  helloclient.cpp  helloclient.h  main.cpp
Example2/QDBusServer/: CMakeLists.txt  helloservice.cpp  helloservice.h  main.cpp
MyXML_Example/: commands.txt
MyXML_Example/DBusClient/: DBusClient.pro  main.cpp  main.qml
MyXML_Example/DBusServer/: Calculator.cpp  Calculator.h  DBusExample.pro  calculator_adaptor.cpp  calculator_adaptor.h  calculator_interface.xml  main.cpp
